# py-chess

./: .dockerignore  .env.example  .env.project  .env.vault  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.kamal/: secrets
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/deploy/: chess.yml
generic/py/alembic/: env.py
generic/py/alembic/versions/: 20250926_113958_74e9156d0365_init.py
generic/py/src/: __main__.py  config.py  logger.py  state.py
generic/py/src/database/: database.py
generic/py/src/database/models/: user.py
generic/py/src/server/: __init__.py  deps.py
generic/py/src/server/api/: __init__.py
generic/py/src/server/api/v0/: __init__.py
generic/py/src/server/api/v0/auth/: __init__.py  whoami.py
generic/py/src/server/auth/: __init__.py
generic/py/src/server/handlers/: component.py  page.py
generic/py/src/server/health/: __init__.py
generic/py/src/server/pages/: index.py
generic/py/src/server/pages/app/: __init__.py  dashboard.py  login.py  settings.py
generic/py/tests/database/: test_user.py
iac/stages/production/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
iac/stages/production/.terraform/: environment  terraform.tfstate
iac/stages/production/.terraform/modules/: modules.json
src/: __init__.py  __main__.py  config.py  logger.py  state.py
src/chess/: __init__.py  engine.py  render.py  service.py
src/database/: __init__.py  database.py
src/database/models/: __init__.py  game.py  user.py
src/server/: __init__.py  deps.py
src/server/api/v0/: __init__.py
src/server/api/v0/auth/: __init__.py
src/server/api/v0/engine/: __init__.py
src/server/api/v0/games/: __init__.py  create.py  move.py  stream.py
src/server/auth/: __init__.py
src/server/handlers/: __init__.py
src/server/pages/: __init__.py  index.py
src/server/pages/app/: __init__.py  dashboard.py  game.py  login.py
static/css/: main.css
static/js/: board.js  engine.js
templates/: layout.html
templates/layouts/: app.html  base.html  home.html  minimal.html
templates/pages/: 404.html  game.html  index.html  new_game.html
templates/pages/app/: dashboard.html  game.html  login.html  new_game.html
tests/: __init__.py
tests/chess/: test_engine.py  test_render.py  test_service.py
